--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@iconify/react": "^6.0.2",
     "axios": "^1.13.2",
     "framer-motion": "^12.23.25",
+    "jspdf": "^4.0.0",
+    "jspdf-autotable": "^5.0.7",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.10.1"
