Change API base URL to production
Updated API base URL for production environment.

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 ﻿# Environment Configuration
 
 # API Base URL - Update this to match your backend URL
-VITE_API_BASE_URL=http://localhost:4000/cbt
+VITE_API_BASE_URL=https://api-cbt.fidev.web.id/cbt
 
 # Other environment variables
 # VITE_APP_NAME=CBT System
